<resources>
    <string name="app_name">ASFSG1</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_auction">Đấu giá</string>
    <string name="title_auction_tpi">Tham gia đấu giá</string>
    <string name="title_list_auctioner">Phiên đấu giá</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Số điện thoại</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="prompt_repassword">Nhập lại mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_up">Đăng ký</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Chào mừng !"</string>
    <string name="invalid_username">Tài khoản không đúng</string>
    <string name="invalid_password">Mật khẩu phải lớn hơn 8 kí tự</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <string name="forgetPassword">Quên mật khẩu? Lấy lại mật khẩu</string>
    <string name="or">Hoặc</string>
    <string name="signup">Chưa có tài khoản? Đăng ký</string>
    <string name="login">Đã có tài khoản? Đăng nhập</string>
    <string name="profile">Tài khoản</string>
    <string name="prompt_fullname">Họ và tên</string>
    <string name="term_register_auction">Tôi đã đọc và nghiên cứu đầy đủ các thông tin của hồ sơ tham dự đấu giá. Tôi cam kết thực hiện đúng các quy định trong hồ sơ và quy định pháp luật liên quan.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="payment_methods">
        <item>VN_PAY</item>
    </string-array>
</resources>