<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.data.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:src="@drawable/auction_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

<!--        <TextView-->
<!--            android:id="@+id/tvLogin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:gravity="center_horizontal|top"-->
<!--            android:text="ĐĂNG NHẬP"-->
<!--            android:textColor="@color/green"-->
<!--            android:textSize="28sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.502"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/logoImage" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_bg"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage">

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="#979797"
                android:textColor="@color/black"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <TextView
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/green_bg"
                android:backgroundTint="@color/green"
                android:enabled="false"

                android:gravity="center"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgetPassword"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/orTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/or"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgetPassword" />

            <View
                android:id="@+id/leftLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@id/orTextView"
                app:layout_constraintEnd_toStartOf="@id/orTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/orTextView"
                app:layout_constraintWidth_percent="0.4" />

            <View
                android:id="@+id/rightLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@id/orTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/orTextView"
                app:layout_constraintTop_toTopOf="@id/orTextView"
                app:layout_constraintWidth_percent="0.4" />

            <LinearLayout
                android:id="@+id/socialSignInLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orTextView"
                app:layout_constraintWidth_percent="0.8">

                <ImageView
                    android:id="@+id/googleSignInButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/google_icon" />

                <!--                <ImageView-->
                <!--                    android:id="@+id/facebookSignInButton"-->
                <!--                    android:layout_width="0dp"-->
                <!--                    android:layout_height="48dp"-->
                <!--                    android:layout_marginStart="8dp"-->
                <!--                    android:layout_marginEnd="8dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:src="@drawable/facebook_icon" />-->

                <!--                <ImageView-->
                <!--                    android:id="@+id/appleSignInButton"-->
                <!--                    android:layout_width="0dp"-->
                <!--                    android:layout_height="48dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:src="@drawable/apple_icon" />-->
            </LinearLayout>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:text="@string/signup"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/socialSignInLayout" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>