<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.data.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/auction_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ScrollView
            android:id="@+id/signupScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_bg"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signupLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/prompt_phone"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:textColorHint="#979797"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/prompt_fullname"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:textColorHint="#979797"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullname" />

                <EditText
                    android:id="@+id/repassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/prompt_repassword"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:textColorHint="#979797"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_bold"
                android:background="@drawable/green_bg"
                android:backgroundTint="@color/background"
                android:enabled="false"

                android:gravity="center"
                android:text="@string/action_sign_up"
                android:textColor="@color/text"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repassword" />

<!--            <TextView-->
<!--                android:id="@+id/tvForgetPassword"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:text="@string/forgetPassword"-->
<!--                android:textColor="@color/green"-->
<!--                android:fontFamily="@font/roboto_bold"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/login" />-->

<!--            <TextView-->
<!--                android:id="@+id/orTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:text="@string/or"-->
<!--                android:textColor="@color/black"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/tvForgetPassword" />-->

<!--            <View-->
<!--                android:id="@+id/leftLine"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@android:color/darker_gray"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/orTextView"-->
<!--                app:layout_constraintEnd_toStartOf="@id/orTextView"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@id/orTextView"-->
<!--                app:layout_constraintWidth_percent="0.4" />-->

<!--            <View-->
<!--                android:id="@+id/rightLine"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@android:color/darker_gray"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/orTextView"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toEndOf="@id/orTextView"-->
<!--                app:layout_constraintTop_toTopOf="@id/orTextView"-->
<!--                app:layout_constraintWidth_percent="0.4" />-->

<!--            <LinearLayout-->
<!--                android:id="@+id/socialSignInLayout"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="12dp"-->
<!--                android:orientation="horizontal"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/orTextView"-->
<!--                app:layout_constraintWidth_percent="0.8">-->

<!--                <ImageView-->
<!--                    android:id="@+id/googleSignInButton"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="48dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:src="@drawable/google_icon" />-->

<!--                &lt;!&ndash;                <ImageView&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:id="@+id/facebookSignInButton"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_height="48dp"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_marginStart="8dp"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_marginEnd="8dp"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:src="@drawable/facebook_icon" />&ndash;&gt;-->

<!--                &lt;!&ndash;                <ImageView&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:id="@+id/appleSignInButton"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_height="48dp"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
<!--                &lt;!&ndash;                    android:src="@drawable/apple_icon" />&ndash;&gt;-->
<!--            </LinearLayout>-->

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:text="@string/login"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signupLayout"
                app:layout_constraintStart_toStartOf="@+id/signupLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>